add unit converter for temperature units

--- a/lemon_weather_generator/configurations/config.json
+++ b/lemon_weather_generator/configurations/config.json
@@ -1,6 +1,7 @@
 {
     "decimal_digits": 1,
     "temperature_unit": "C",
+    "hours_per_day": 24,
     "effects": {
         "temperatureCloudiness": true
     }
