add dataBeautifier module and hour formatting

--- a/lemon_weather_generator/configurations/config.json
+++ b/lemon_weather_generator/configurations/config.json
@@ -1,6 +1,7 @@
 {
     "decimal_digits": 2,
     "temperature_unit": "C",
+    "time_format": "24",
     "hours_per_day": 24,
     "effects": {
         "temperatureCloudiness": true
