implement temperature generation of a whole day

--- a/lemon_weather_generator/configurations/config.json
+++ b/lemon_weather_generator/configurations/config.json
@@ -3,6 +3,8 @@
     "temperature_unit": "C",
     "time_format": "24",
     "hours_per_day": 24,
+    "heating_cooling_offset": 0.2,
+    "cooling_rate_factor": -0.5,
     "effects": {
         "temperatureCloudiness": true
     }
